--- a/dev/assets/_modules/header.pug
+++ b/dev/assets/_modules/header.pug
@@ -1,8 +1,8 @@
 header.snj-container-fluid
 	.row
 		#header-wrapper.snj-col-12
-			a.logo-wrapper(href="/")
+			a.logo-wrapper.tween-up(href="index.html")
 				+logo-jb
 
 			include ../_modules/nav.pug
-			a.link-page.line-link(href="about.html") About Us
+			a.link-page.line-link.tween-up(href="about.html") About Us
