--- a/dev/assets/project-social-suede.pug
+++ b/dev/assets/project-social-suede.pug
@@ -1,14 +1,13 @@
 extends _templates/layout.pug
-block preloader
-	.preloader.color-2
+
 block content
 	.snj-container-fluid.project-page
 		.row
 			section.project-about
 				//- .background-wrapper.p-about-bg
 				.info-wrapper.snj-col-10.offset-1.snj-col-md-4.offset-md-4
-					h2.subtitle-block Social content & Graphic Design
-					h1.project-title Puma Middle East
+					h2.subtitle-block Campaign & Social Media Strategy
+					h1.project-title Suede Guerrilla
 					span 01
 				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					.snj-row
@@ -23,13 +22,10 @@ block content
 							h5 2017
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title Study case Title
+					h1.project-title Suede Guerrilla
 					div.paragraph-left
-						p Lorem ipsum dolor sit amet, consecter adipiangelit, s sed do eiusmod tempor incididunt ut labq, Lorem ipst, sed do eiusmod tempor incididunt ut labore.
-						p Lorem ipsum dolor sit amet, consecter dipiscing elit, sed do eiusmod tempor incididunt ut labore. Loremor ipsum dolor sit amet, consecter adipiscing elit, sed do eiusmod tempor incididunt ut labore .
-					div.paragraph-next
-						p Lorem ipsum dolor sit amet, consecter adipiang incididunt ut laboreem ipsum dolor sit amet, consecter diping elit, sed do eiusmod tempor un labore.
-						p Lorem ipsum dolor sit amet, consecter adipiang incididunt ut laboreem ipsum dolor sit amet, consecter diping elit, sed do eiusmod tempor un labore.
+						p For PUMA’s Run the Streets campaign, we created the Suede Guerrillas, a group of artists and creatives from different walks of life that authentically embodied the campaign’s ethos. It was the first long-term micro influencer campaign to exist in the region, and produced plenty of original content and activations. In Year 2, the Suede Guerrillas evolved into a regional platform for co-creation anchored by its site, suedeguerrillas.com, which we also designed. 
+
 			.p-photo1
 				img(src="../img/project-img-1.jpg", alt="")
 			.img-wrapper
@@ -38,6 +34,7 @@ block content
 				.p-photo2
 					img(src="../img/project-img-3.jpg", alt="")
 			include _modules/slider.pug
+			
 			section.video-wrapper.snj-col-12
 				video(src="")
 				button.btn-circle
@@ -48,25 +45,25 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container
-					a.arrow-up.prev-case(href="")
+					a.arrow-up.prev-case(href="project-brand-cred.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
 							.rectangle-arrow
 				.description.snj-col-8.offset-2.snj-col-md-4.offset-md-1
 					p Next Project
-					h3 Amongst Few
-					h4 Branding & Interior Design
-					a(href="") See case
+					h3 Power Horse
+					h4 Campaign & Social Media Strategy
+					a(href="project-social-power.html") See case
 				.snj-col-md-1.offset-md-2.arrow-container
-					a.arrow-up.next-case(href="")
+					a.arrow-up.next-case(href="project-social-power.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
 				p.copyright © Copyright 2019
-	button.btn-wrapper.btn-pages
+	a.btn-wrapper.btn-pages(href="workstrategy.html")
 		span.btn-animate-up
 			+back-icon-btn
 block footer
-	+footer('scroll')
+	+footer("scroll")
