--- a/dev/scss/global/_components.scss
+++ b/dev/scss/global/_components.scss
@@ -14,9 +14,48 @@
 			}
 		}
 	}
-	// @media(min-width: 992px){
-	// 	a{
-	// 		padding-right: 0px;
-	// 	}
-	// }
+}
+
+
+// work menu project section backgrounds
+#branding-work{
+	.project-bg-1{
+		// background-image: 
+	}
+	.project-bg-2{
+		// background-image: 
+	}
+}
+
+#event-work{
+	.project-bg-1{
+		// background-image: 
+	}
+	.project-bg-2{
+		// background-image: 
+	}
+}
+
+#management-work{
+	.project-bg-1{
+		// background-image: 
+	}
+	.project-bg-2{
+		// background-image: 
+	}
+	.project-bg-3{
+		// background-image: 
+	}
+	.project-bg-4{
+		// background-image: 
+	}
+}
+
+#strategy-work{
+	.project-bg-1{
+		// background-image: 
+	}
+	.project-bg-2{
+		// background-image: 
+	}
 }
