--- a/dev/scss/global/_fonts.scss
+++ b/dev/scss/global/_fonts.scss
@@ -1,6 +1,36 @@
+// @font-face {
+//     font-family: 'TitlingGothicFB Standar';
+//     src: url('../fonts/TitlingGothicFBNormal-Standard.woff2') format('woff2'),
+//         url('../fonts/TitlingGothicFBNormal-Standard.woff') format('woff'),
+//         url('../fonts/TitlingGothicFBNormal-Standard.ttf') format('truetype');
+//     font-weight: normal;
+//     font-style: normal;
+// }
+
+// @font-face {
+//     font-family: 'TitlingGothicFB light';
+//     src: url('../fonts/TitlingGothicFBNormal-Light.woff2') format('woff2'),
+//         url('../fonts/TitlingGothicFBNormal-Light.woff') format('woff'),
+//         url('../fonts/TitlingGothicFBNormal-Light.ttf') format('truetype');
+//     font-weight: 300;
+//     font-style: normal;
+// }
+
+// @font-face {
+//     font-family: 'Nocturne Serif ExtraBold';
+//     src: url('../fonts/NocturneSerif-ExtraBold.woff2') format('woff2'),
+//         url('../fonts/NocturneSerif-ExtraBold.woff') format('woff'),
+//         url('../fonts/NocturneSerif-ExtraBold.ttf') format('truetype');
+//     font-weight: 800;
+//     font-style: normal;
+// }
+
+// nuevos
 @font-face {
-    font-family: 'TitlingGothicFB Standar';
-    src: url('../fonts/TitlingGothicFBNormal-Standard.woff2') format('woff2'),
+    font-family: 'TitlingGothicFB Standard';
+    src: url('../fonts/TitlingGothicFBNormal-Standard.eot');
+    src: url('../fonts/TitlingGothicFBNormal-Standard.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/TitlingGothicFBNormal-Standard.woff2') format('woff2'),
         url('../fonts/TitlingGothicFBNormal-Standard.woff') format('woff'),
         url('../fonts/TitlingGothicFBNormal-Standard.ttf') format('truetype');
     font-weight: normal;
@@ -9,7 +39,9 @@
 
 @font-face {
     font-family: 'TitlingGothicFB light';
-    src: url('../fonts/TitlingGothicFBNormal-Light.woff2') format('woff2'),
+    src: url('../fonts/TitlingGothicFBNormal-Light.eot');
+    src: url('../fonts/TitlingGothicFBNormal-Light.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/TitlingGothicFBNormal-Light.woff2') format('woff2'),
         url('../fonts/TitlingGothicFBNormal-Light.woff') format('woff'),
         url('../fonts/TitlingGothicFBNormal-Light.ttf') format('truetype');
     font-weight: 300;
@@ -18,7 +50,9 @@
 
 @font-face {
     font-family: 'Nocturne Serif ExtraBold';
-    src: url('../fonts/NocturneSerif-ExtraBold.woff2') format('woff2'),
+    src: url('../fonts/NocturneSerif-ExtraBold.eot');
+    src: url('../fonts/NocturneSerif-ExtraBold.eot?#iefix') format('embedded-opentype'),
+        url('../fonts/NocturneSerif-ExtraBold.woff2') format('woff2'),
         url('../fonts/NocturneSerif-ExtraBold.woff') format('woff'),
         url('../fonts/NocturneSerif-ExtraBold.ttf') format('truetype');
     font-weight: 800;
