--- a/dev/scss/views/_ourwork-sections.scss
+++ b/dev/scss/views/_ourwork-sections.scss
@@ -60,7 +60,8 @@
 			font-family: 'TitlingGothicFB light';
 			font-size: 12px;
 			padding-bottom: 10px;
-			width: 55.55%;
+			// width: 55.55%;
+			width: auto;
 			position: relative;
 			z-index: 10;
 		}
