--- a/dev/assets/_modules/icons.pug
+++ b/dev/assets/_modules/icons.pug
@@ -76,6 +76,11 @@ mixin link-icon
 mixin tw-icon
 	svg(xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" width="25.27" height="20" viewBox="0 0 25.27 20" xml:space="preserve")
 		path(d="M22.5,4.9c0,0.3,0,0.4,0,0.7c0,6.7-5.2,14.4-14.6,14.4c-2.9,0-5.6-0.8-7.9-2.3c0.4,0.1,0.8,0.1,1.3,0.1c2.4,0,4.6-0.8,6.4-2.2c-2.3,0-4.2-1.5-4.8-3.5c0.3,0.1,0.7,0.1,1,0.1c0.5,0,0.9-0.1,1.3-0.2c-2.3-0.5-4.1-2.5-4.1-4.9c0,0,0,0,0-0.1c0.7,0.4,1.5,0.6,2.3,0.7C2.1,6.8,1.3,5.3,1.3,3.5c0-0.9,0.3-1.8,0.7-2.5c2.5,3.1,6.4,5.1,10.6,5.3c-0.1-0.3-0.2-0.8-0.2-1.2c0-2.8,2.3-5.1,5.2-5.1c1.5,0,2.8,0.6,3.8,1.6c1.2-0.3,2.3-0.7,3.3-1.3c-0.4,1.2-1.2,2.2-2.3,2.8c1-0.2,2-0.4,2.9-0.8C24.4,3.3,23.5,4.2,22.5,4.9z")
+mixin link-icon-2
+	svg(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 21.54 20" height="20" width="21.54")
+		path(d="M7.69,6.15H12V8.34H12a4.7,4.7,0,0,1,4.2-2.19c4.5,0,5.33,2.8,5.33,6.44V20H17.1V13.43c0-1.57,0-3.58-2.31-3.58s-2.66,1.7-2.66,3.47V20H7.69Z")
+		path(d="M0,6.15H4.62V20H0Z")
+		path(d="M4.62,2.31A2.31,2.31,0,1,1,2.31,0,2.32,2.32,0,0,1,4.62,2.31Z")
 //- logo
 
 mixin logo-jb
