--- a/dev/assets/message.pug
+++ b/dev/assets/message.pug
@@ -1,22 +1,42 @@
 extends _templates/layout.pug
-
+block preloader
+	.preloader.color-3
 block content
 	.message-section.snj-container-fluid.flex-column
 		.row
 			.center-wrapper.snj-col-9.offset-1.snj-col-md-6.offset-md-2
-				h2.subtitle-block Get in touch nnn
-				form
-					.input-section
-						.input-container
-							input.input-wrapper(type="text" placeholder="Your name")
-						.input-container
-							input.input-wrapper(type="email" placeholder="Your email")
-						.input-container
-							textarea.input-wrapper(name="", cols="30", rows="1" placeholder="Tell us about you project")
-						.input-container.check-box
-							label.input-wrapper I have read and agreed with privacy policy.
-								input(type="checkbox" checked="checked") 
-								span.checkmark
+				h2.subtitle-block Get in touch
+				form#inputs-container
+					//- .input-container.line-input
+					//- 	input.input-wrapper(type="text" required)
+					//- 	label Your Name
+					//- 	//- input.input-wrapper(type="text" placeholder="Your name")
+					//- .input-container.line-input
+					//- 	input.input-wrapper(type="email" required)
+					//- 	label Your email
+					//- 	//- input.input-wrapper(type="email" placeholder="Your email")
+					//- .input-container.line-input
+					//- 	textarea.input-wrapper.jb-formfield(required)
+					//- 	label Tell us about your project required
+					//- 	//- textarea.input-wrapper.jb-formfield(name="", cols="30", rows="1" placeholder="Tell us about your project", required)
+					//- //- checkbox
+					.input-wrapper
+						input(type="text" name="name" id="Your Name" required)
+						label.placeholder(for="name") Your Name
+						span.bar
+					.input-wrapper
+						input(type="email" name="email" id="email" required)
+						label.placeholder(for="email") Your mail
+						span.bar
+					.input-wrapper
+						textarea.sn-formfield(name="textarea",minlength="50", id="textarea", required)
+						label.placeholder(for="textarea") Tell us about your project
+						span.bar
+
+					.input-wrapper#check-box
+						label I have read and agreed with privacy policy.
+							input.checkbox(type="checkbox" checked="checked")
+							span.checkmark
 				.arrow-container
 					+arrow-right("/", "Send it")
 
@@ -24,3 +44,5 @@ block content
 	a(href="ourwork.html")
 		button.btn-wrapper.btn-pages
 			span.btn-animate-up Our Work
+block footer
+	+footer('')
