--- a/dev/assets/project-manage-coffee.pug
+++ b/dev/assets/project-manage-coffee.pug
@@ -7,9 +7,9 @@ block content
 			section.project-about
 				//- .background-wrapper.p-about-bg
 				.info-wrapper.snj-col-10.offset-1.snj-col-md-4.offset-md-4
-					h2.subtitle-block Social content & Graphic Design
-					h1.project-title Puma Middle East
-					span 01
+					h2.subtitle-block Content Creation & Management
+					h1.project-title Cartel Coffee
+					span 02
 				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					.snj-row
 						div.especific-item.snj-col-md-2
@@ -23,13 +23,10 @@ block content
 							h5 2017
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title Study case Title
+					h1.project-title Cartel Coffee
 					div.paragraph-left
-						p Lorem ipsum dolor sit amet, consecter adipiangelit, s sed do eiusmod tempor incididunt ut labq, Lorem ipst, sed do eiusmod tempor incididunt ut labore.
-						p Lorem ipsum dolor sit amet, consecter dipiscing elit, sed do eiusmod tempor incididunt ut labore. Loremor ipsum dolor sit amet, consecter adipiscing elit, sed do eiusmod tempor incididunt ut labore .
-					div.paragraph-next
-						p Lorem ipsum dolor sit amet, consecter adipiang incididunt ut laboreem ipsum dolor sit amet, consecter diping elit, sed do eiusmod tempor un labore.
-						p Lorem ipsum dolor sit amet, consecter adipiang incididunt ut laboreem ipsum dolor sit amet, consecter diping elit, sed do eiusmod tempor un labore.
+						p We planned and shot all of the new coffee shop’s content, focusing on what makes the shop special - their unusual branding and their in-house roasting done by the shop’s Emirati founder. 
+						p We also pushed to set the standard for coffee shop aesthetics, not only in the city, but in the entire region. Not an easy job with so many coffee shops out there, but we stand by our ambition, and its outcome. 
 			.p-photo1
 				img(src="../img/project-img-1.jpg", alt="")
 			.img-wrapper
@@ -38,6 +35,7 @@ block content
 				.p-photo2
 					img(src="../img/project-img-3.jpg", alt="")
 			include _modules/slider.pug
+
 			section.video-wrapper.snj-col-12
 				video(src="")
 				button.btn-circle
@@ -48,24 +46,24 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container
-					a.arrow-up.prev-case(href="")
+					a.arrow-up.prev-case(href="project-manage-puma.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
 							.rectangle-arrow
 				.description.snj-col-8.offset-2.snj-col-md-4.offset-md-1
 					p Next Project
-					h3 Amongst Few
-					h4 Branding & Interior Design
-					a(href="") See case
+					h3 Irisin
+					h4 Content Creation & Management
+					a(href="project-manage-irisin.html") See case
 				.snj-col-md-1.offset-md-2.arrow-container
-					a.arrow-up.next-case(href="")
+					a.arrow-up.next-case(href="project-manage-irisin.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
 				p.copyright © Copyright 2019
-	button.btn-wrapper.btn-pages
+	a.btn-wrapper.btn-pages(href="workmanagement.html")
 		span.btn-animate-up
 			+back-icon-btn
 block footer
