--- a/dev/assets/project-manage-cova.pug
+++ b/dev/assets/project-manage-cova.pug
@@ -7,9 +7,9 @@ block content
 			section.project-about
 				//- .background-wrapper.p-about-bg
 				.info-wrapper.snj-col-10.offset-1.snj-col-md-4.offset-md-4
-					h2.subtitle-block Social content & Graphic Design
-					h1.project-title Puma Middle East
-					span 01
+					h2.subtitle-block Creation & Management
+					h1.project-title Cova
+					span 04
 				aside.especifications.snj-col-10.offset-1.snj-col-md-6.offset-md-3
 					.snj-row
 						div.especific-item.snj-col-md-2
@@ -23,13 +23,10 @@ block content
 							h5 2017
 			section.project-description
 				.snj-col-10.offset-1.snj-col-md-6.offset-md-3
-					h1.project-title Study case Title
+					h1.project-title Cova
 					div.paragraph-left
-						p Lorem ipsum dolor sit amet, consecter adipiangelit, s sed do eiusmod tempor incididunt ut labq, Lorem ipst, sed do eiusmod tempor incididunt ut labore.
-						p Lorem ipsum dolor sit amet, consecter dipiscing elit, sed do eiusmod tempor incididunt ut labore. Loremor ipsum dolor sit amet, consecter adipiscing elit, sed do eiusmod tempor incididunt ut labore .
-					div.paragraph-next
-						p Lorem ipsum dolor sit amet, consecter adipiang incididunt ut laboreem ipsum dolor sit amet, consecter diping elit, sed do eiusmod tempor un labore.
-						p Lorem ipsum dolor sit amet, consecter adipiang incididunt ut laboreem ipsum dolor sit amet, consecter diping elit, sed do eiusmod tempor un labore.
+						p A vibrant restaurant, with astonishingly great food, deserves food content that is just as mouth watering. Yet, the beauty of Coya’s dishes and drinks is that the ingredients and prep that goes into them are just as impressive. So capturing the process, and finished product, were a must. 
+
 			.p-photo1
 				img(src="../img/project-img-1.jpg", alt="")
 			.img-wrapper
@@ -48,24 +45,24 @@ block content
 			//- footer
 			section.footer-project
 				.snj-col-md-1.offset-md-2.arrow-container
-					a.arrow-up.prev-case(href="")
+					a.arrow-up.prev-case(href="project-manage-irisin.html")
 						span.light-font.left-translate Previous Case
 						.arrow-wrapper.left-translate
 							+icon-arrow
 							.rectangle-arrow
 				.description.snj-col-8.offset-2.snj-col-md-4.offset-md-1
 					p Next Project
-					h3 Amongst Few
-					h4 Branding & Interior Design
-					a(href="") See case
+					h3 Puma
+					h4 Event Curation
+					a(href="project-event-puma.html") See case
 				.snj-col-md-1.offset-md-2.arrow-container
-					a.arrow-up.next-case(href="")
+					a.arrow-up.next-case(href="project-event-puma.html")
 						span.light-font.right-translate Next Case
 						.arrow-wrapper.right-translate
 							.rectangle-arrow
 							+icon-arrow
 				p.copyright © Copyright 2019
-	button.btn-wrapper.btn-pages
+	a.btn-wrapper.btn-pages(href="workmanagement.html")
 		span.btn-animate-up
 			+back-icon-btn
 block footer
