--- a/dev/scss/global/_buttons.scss
+++ b/dev/scss/global/_buttons.scss
@@ -11,15 +11,19 @@
 	border-style: none;
 	overflow: hidden;
 	position: relative;
+	outline: none;
+	// button copy
 	span{
 		display: block;
 		line-height: 0;
 		width: 100%;
+		text-align: center;
 		position: absolute;
 		top: 50%;
 		left: 50%;
 		transform: translate(-50%, -50%);
 	}
+	// icons
 	svg {
 		path, rect{
 			fill:$cream;
@@ -27,7 +31,10 @@
 	}
 	&:hover{
 		color: $black;
-		background-color: $cream;
+		// background-color: white;
+		-webkit-animation: backgroundBtn .4s linear forwards; /* Safari 4.0 - 8.0 */
+		animation: backgroundBtn .4s linear forwards;
+		span{color:$black}
 		svg {
 			path, rect{
 				fill: $black;
@@ -35,9 +42,13 @@
 		}
 		// animation time
 		.btn-animate-up{
-			-webkit-animation: animateup .6s cubic-bezier(.21,0,0,1); /* Safari 4.0 - 8.0 */
-			animation: animateup .6s cubic-bezier(.21,0,0,1);
+			-webkit-animation: animateup .5s cubic-bezier(.21,0,0,1); /* Safari 4.0 - 8.0 */
+			animation: animateup .5s cubic-bezier(.21,0,0,1);
 		}
+	}
+	&:focus{
+		background-color: $black;
+		color: $cream;
 	}
 }
 
@@ -225,7 +236,7 @@ a{
 	span{
 		font-size: 12px;
 		color: $brown;
-		font-family: 'TitlingGothicFB Standar';
+		font-family: 'TitlingGothicFB Standard';
 		position: absolute;
 		top: 100%;
 		left: 50%;
